--- a/transient-0.7.7/CHANGELOG
+++ b/transient-0.7.7/CHANGELOG
@@ -1,4 +1,23 @@
 # -*- mode: org -*-
+* v0.7.7    2024-10-04
+
+Bug fix:
+
+- Fix a regression introduced by the previous commit, which broke
+  dynamic prefixes that use a ~:setup-children~ function to prepare
+  their suffixes.  #313
+
+* v0.7.6    2024-10-01
+
+- ~transient-active-prefix~ now accepts a single prefix symbol, in place
+  of a list of such symbols.  #307
+
+- ~other-frame-prefix~ and ~other-window-prefix~ can now be used while a
+  transient prefix is active.  #305
+
+- Added new macro ~transient-with-help-window~ for use in ~:show-help~
+  functions.  #309
+
 * v0.7.5    2024-09-01
 
 - Updated tooling.
