--- a/gptel-0.9.5/README.org
+++ b/gptel-0.9.5/README.org
@@ -7,22 +7,25 @@ gptel is a simple Large Language Model chat client for Emacs, with support for m
 #+html: <div align="center">
 | LLM Backend        | Supports | Requires                   |
 |--------------------+----------+----------------------------|
-| ChatGPT            | ✓      | [[https://platform.openai.com/account/api-keys][API key]]                    |
-| Azure              | ✓      | Deployment and API key     |
-| Ollama             | ✓      | [[https://ollama.ai/][Ollama running locally]]     |
-| GPT4All            | ✓      | [[https://gpt4all.io/index.html][GPT4All running locally]]    |
-| Gemini             | ✓      | [[https://makersuite.google.com/app/apikey][API key]]                    |
-| Llama.cpp          | ✓      | [[https://github.com/ggerganov/llama.cpp/tree/master/examples/server#quick-start][Llama.cpp running locally]]  |
-| Llamafile          | ✓      | [[https://github.com/Mozilla-Ocho/llamafile#quickstart][Local Llamafile server]]     |
-| Kagi FastGPT       | ✓      | [[https://kagi.com/settings?p=api][API key]]                    |
-| Kagi Summarizer    | ✓      | [[https://kagi.com/settings?p=api][API key]]                    |
-| together.ai        | ✓      | [[https://api.together.xyz/settings/api-keys][API key]]                    |
-| Anyscale           | ✓      | [[https://docs.endpoints.anyscale.com/][API key]]                    |
-| Perplexity         | ✓      | [[https://docs.perplexity.ai/docs/getting-started][API key]]                    |
-| Anthropic (Claude) | ✓      | [[https://www.anthropic.com/api][API key]]                    |
-| Groq               | ✓      | [[https://console.groq.com/keys][API key]]                    |
-| OpenRouter         | ✓      | [[https://openrouter.ai/keys][API key]]                    |
-| PrivateGPT         | ✓      | [[https://github.com/zylon-ai/private-gpt#-documentation][PrivateGPT running locally]] |
+| ChatGPT            | ✓        | [[https://platform.openai.com/account/api-keys][API key]]                    |
+| Azure              | ✓        | Deployment and API key     |
+| Ollama             | ✓        | [[https://ollama.ai/][Ollama running locally]]     |
+| GPT4All            | ✓        | [[https://gpt4all.io/index.html][GPT4All running locally]]    |
+| Gemini             | ✓        | [[https://makersuite.google.com/app/apikey][API key]]                    |
+| Llama.cpp          | ✓        | [[https://github.com/ggerganov/llama.cpp/tree/master/examples/server#quick-start][Llama.cpp running locally]]  |
+| Llamafile          | ✓        | [[https://github.com/Mozilla-Ocho/llamafile#quickstart][Local Llamafile server]]     |
+| Kagi FastGPT       | ✓        | [[https://kagi.com/settings?p=api][API key]]                    |
+| Kagi Summarizer    | ✓        | [[https://kagi.com/settings?p=api][API key]]                    |
+| together.ai        | ✓        | [[https://api.together.xyz/settings/api-keys][API key]]                    |
+| Anyscale           | ✓        | [[https://docs.endpoints.anyscale.com/][API key]]                    |
+| Perplexity         | ✓        | [[https://docs.perplexity.ai/docs/getting-started][API key]]                    |
+| Anthropic (Claude) | ✓        | [[https://www.anthropic.com/api][API key]]                    |
+| Groq               | ✓        | [[https://console.groq.com/keys][API key]]                    |
+| OpenRouter         | ✓        | [[https://openrouter.ai/keys][API key]]                    |
+| PrivateGPT         | ✓        | [[https://github.com/zylon-ai/private-gpt#-documentation][PrivateGPT running locally]] |
+| DeepSeek           | ✓        | [[https://platform.deepseek.com/api_keys][API key]]                    |
+| Cerebras           | ✓        | [[https://cloud.cerebras.ai/][API key]]                    |
+| Github Models      | ✓        | [[https://github.com/settings/tokens][Token]]                      |
 #+html: </div>
 
 *General usage*: ([[https://www.youtube.com/watch?v=bsRnh_brggM][YouTube Demo]])
@@ -30,6 +33,10 @@ gptel is a simple Large Language Model chat client for Emacs, with support for m
 https://user-images.githubusercontent.com/8607532/230516812-86510a09-a2fb-4cbd-b53f-cc2522d05a13.mp4
 
 https://user-images.githubusercontent.com/8607532/230516816-ae4a613a-4d01-4073-ad3f-b66fa73c6e45.mp4
+
+*Media support*
+
+https://github.com/user-attachments/assets/1fd947e1-226b-4be2-bc68-7b22b2e3215f
 
 *Multi-LLM support demo*:
 
@@ -39,13 +46,15 @@ https://github-production-user-asset-6210df.s3.amazonaws.com/8607532/278854024-a
 - Interact with LLMs from anywhere in Emacs (any buffer, shell, minibuffer, wherever)
 - LLM responses are in Markdown or Org markup.
 - Supports conversations and multiple independent sessions.
+- Supports multi-modal models (send images, documents)
 - Save chats as regular Markdown/Org/Text files and resume them later.
 - You can go back and edit your previous prompts or LLM responses when continuing a conversation. These will be fed back to the model.
-- Don't like gptel's workflow? Use it to create your own for any supported model/backend with a [[https://github.com/karthink/gptel/wiki#defining-custom-gptel-commands][simple API]].
+- Don't like gptel's workflow? Use it to create your own for any supported model/backend with a [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][simple API]].
 
 gptel uses Curl if available, but falls back to url-retrieve to work without external dependencies.
 
 ** Contents :toc:
+  - [[#breaking-changes][Breaking changes!]]
   - [[#installation][Installation]]
       - [[#straight][Straight]]
       - [[#manual][Manual]]
@@ -67,11 +76,16 @@ gptel uses Curl if available, but falls back to url-retrieve to work without ext
       - [[#groq][Groq]]
       - [[#openrouter][OpenRouter]]
       - [[#privategpt][PrivateGPT]]
+      - [[#deepseek][DeepSeek]]
+      - [[#cerebras][Cerebras]]
+      - [[#github-models][Github Models]]
   - [[#usage][Usage]]
     - [[#in-any-buffer][In any buffer:]]
     - [[#in-a-dedicated-chat-buffer][In a dedicated chat buffer:]]
+      - [[#including-media-images-documents-with-requests][Including media (images, documents) with requests]]
       - [[#save-and-restore-your-chat-sessions][Save and restore your chat sessions]]
     - [[#include-more-context-with-requests][Include more context with requests]]
+    - [[#rewrite-refactor-or-fill-in-a-region][Rewrite, refactor or fill in a region]]
     - [[#extra-org-mode-conveniences][Extra Org mode conveniences]]
   - [[#faq][FAQ]]
       - [[#i-want-the-window-to-scroll-automatically-as-the-response-is-inserted][I want the window to scroll automatically as the response is inserted]]
@@ -84,8 +98,12 @@ gptel uses Curl if available, but falls back to url-retrieve to work without ext
       - [[#why-another-llm-client][Why another LLM client?]]
   - [[#additional-configuration][Additional Configuration]]
   - [[#alternatives][Alternatives]]
-    - [[#extensions-using-gptel][Extensions using gptel]]
+    - [[#packages-using-gptel][Packages using gptel]]
   - [[#acknowledgments][Acknowledgments]]
+
+** Breaking changes!
+
+- The =gptel-model= is now expected to be a symbol, not a string.  Please update your configuration.
 
 ** Installation
 
@@ -131,10 +149,11 @@ In =config.el=
 #+html: <details><summary>
 **** Spacemacs
 #+html: </summary>
-After installation with =M-x package-install⏎= =gptel=
-
-- Add =gptel= to =dotspacemacs-additional-packages=
-- Add =(require 'gptel)= to =dotspacemacs/user-config=
+In your =.spacemacs= file, add =llm-client= to =dotspacemacs-configuration-layers=.
+#+begin_src emacs-lisp
+(llm-client :variables
+            llm-client-enable-gptel t)
+#+end_src
 #+html: </details>
 ** Setup
 *** ChatGPT
@@ -161,7 +180,7 @@ Register a backend with
   :endpoint "/openai/deployments/YOUR_DEPLOYMENT_NAME/chat/completions?api-version=2023-05-15" ;or equivalent
   :stream t                             ;Enable streaming responses
   :key #'gptel-api-key
-  :models '("gpt-3.5-turbo" "gpt-4"))
+  :models '(gpt-3.5-turbo gpt-4))
 #+end_src
 Refer to the documentation of =gptel-make-azure= to set more parameters.
 
@@ -173,14 +192,14 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model "gpt-3.5-turbo"
+ gptel-model 'gpt-3.5-turbo
  gptel-backend (gptel-make-azure "Azure-1"
                  :protocol "https"
                  :host "YOUR_RESOURCE_NAME.openai.azure.com"
                  :endpoint "/openai/deployments/YOUR_DEPLOYMENT_NAME/chat/completions?api-version=2023-05-15"
                  :stream t
                  :key #'gptel-api-key
-                 :models '("gpt-3.5-turbo" "gpt-4")))
+                 :models '(gpt-3.5-turbo gpt-4)))
 #+end_src
 #+html: </details>
 
@@ -193,7 +212,7 @@ Register a backend with
 (gptel-make-gpt4all "GPT4All"           ;Name of your choosing
  :protocol "http"
  :host "localhost:4891"                 ;Where it's running
- :models '("mistral-7b-openorca.Q4_0.gguf")) ;Available models
+ :models '(mistral-7b-openorca.Q4_0.gguf)) ;Available models
 #+end_src
 These are the required parameters, refer to the documentation of =gptel-make-gpt4all= for more.
 
@@ -206,11 +225,11 @@ The above code makes the backend available to select.  If you want it to be the 
 ;; OPTIONAL configuration
 (setq
  gptel-max-tokens 500
- gptel-model "mistral-7b-openorca.Q4_0.gguf"
+ gptel-model 'mistral-7b-openorca.Q4_0.gguf
  gptel-backend (gptel-make-gpt4all "GPT4All"
                  :protocol "http"
                  :host "localhost:4891"
-                 :models '("mistral-7b-openorca.Q4_0.gguf")))
+                 :models '(mistral-7b-openorca.Q4_0.gguf)))
 #+end_src
 
 #+html: </details>
@@ -224,7 +243,7 @@ Register a backend with
 (gptel-make-ollama "Ollama"             ;Any name of your choosing
   :host "localhost:11434"               ;Where it's running
   :stream t                             ;Stream responses
-  :models '("mistral:latest"))          ;List of models
+  :models '(mistral:latest))          ;List of models
 #+end_src
 These are the required parameters, refer to the documentation of =gptel-make-ollama= for more.
 
@@ -236,11 +255,11 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model "mistral:latest"
+ gptel-model 'mistral:latest
  gptel-backend (gptel-make-ollama "Ollama"
                  :host "localhost:11434"
                  :stream t
-                 :models '("mistral:latest")))
+                 :models '(mistral:latest)))
 #+end_src
 
 #+html: </details>
@@ -264,7 +283,7 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model "gemini-pro"
+ gptel-model 'gemini-pro
  gptel-backend (gptel-make-gemini "Gemini"
                  :key "YOUR_GEMINI_API_KEY"
                  :stream t))
@@ -286,7 +305,7 @@ Register a backend with
   :stream t                             ;Stream responses
   :protocol "http"
   :host "localhost:8000"                ;Llama.cpp server location
-  :models '("test"))                    ;Any names, doesn't matter for Llama
+  :models '(test))                    ;Any names, doesn't matter for Llama
 #+end_src
 These are the required parameters, refer to the documentation of =gptel-make-openai= for more.
 
@@ -298,12 +317,12 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model   "test"
+ gptel-model   'test
  gptel-backend (gptel-make-openai "llama-cpp"
                  :stream t
                  :protocol "http"
                  :host "localhost:8000"
-                 :models '("test")))
+                 :models '(test)))
 #+end_src
 
 #+html: </details>
@@ -332,7 +351,7 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model "fastgpt"
+ gptel-model 'fastgpt
  gptel-backend (gptel-make-kagi "Kagi"
                  :key "YOUR_KAGI_API_KEY"))
 #+end_src
@@ -352,9 +371,9 @@ Register a backend with
   :key "your-api-key"                   ;can be a function that returns the key
   :stream t
   :models '(;; has many more, check together.ai
-            "mistralai/Mixtral-8x7B-Instruct-v0.1"
-            "codellama/CodeLlama-13b-Instruct-hf"
-            "codellama/CodeLlama-34b-Instruct-hf"))
+            mistralai/Mixtral-8x7B-Instruct-v0.1
+            codellama/CodeLlama-13b-Instruct-hf
+            codellama/CodeLlama-34b-Instruct-hf))
 #+end_src
 
 You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
@@ -365,16 +384,16 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model   "mistralai/Mixtral-8x7B-Instruct-v0.1"
+ gptel-model   'mistralai/Mixtral-8x7B-Instruct-v0.1
  gptel-backend
  (gptel-make-openai "TogetherAI"         
    :host "api.together.xyz"
    :key "your-api-key"                   
    :stream t
    :models '(;; has many more, check together.ai
-             "mistralai/Mixtral-8x7B-Instruct-v0.1"
-             "codellama/CodeLlama-13b-Instruct-hf"
-             "codellama/CodeLlama-34b-Instruct-hf")))
+             mistralai/Mixtral-8x7B-Instruct-v0.1
+             codellama/CodeLlama-13b-Instruct-hf
+             codellama/CodeLlama-34b-Instruct-hf)))
 #+end_src
 
 #+html: </details>
@@ -389,7 +408,7 @@ Register a backend with
   :host "api.endpoints.anyscale.com"
   :key "your-api-key"                   ;can be a function that returns the key
   :models '(;; has many more, check anyscale
-            "mistralai/Mixtral-8x7B-Instruct-v0.1"))
+            mistralai/Mixtral-8x7B-Instruct-v0.1))
 #+end_src
 
 You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
@@ -400,13 +419,13 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model   "mistralai/Mixtral-8x7B-Instruct-v0.1"
+ gptel-model   'mistralai/Mixtral-8x7B-Instruct-v0.1
  gptel-backend
  (gptel-make-openai "Anyscale"
                  :host "api.endpoints.anyscale.com"
                  :key "your-api-key"
                  :models '(;; has many more, check anyscale
-                           "mistralai/Mixtral-8x7B-Instruct-v0.1")))
+                           mistralai/Mixtral-8x7B-Instruct-v0.1)))
 #+end_src
 
 #+html: </details>
@@ -423,10 +442,10 @@ Register a backend with
   :endpoint "/chat/completions"
   :stream t
   :models '(;; has many more, check perplexity.ai
-            "pplx-7b-chat"
-            "pplx-70b-chat"
-            "pplx-7b-online"
-            "pplx-70b-online"))
+            pplx-7b-chat
+            pplx-70b-chat
+            pplx-7b-online
+            pplx-70b-online))
 #+end_src
 
 You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
@@ -437,7 +456,7 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model   "pplx-7b-chat"
+ gptel-model   'pplx-7b-chat
  gptel-backend
  (gptel-make-openai "Perplexity"
    :host "api.perplexity.ai"
@@ -445,10 +464,10 @@ The above code makes the backend available to select.  If you want it to be the 
    :endpoint "/chat/completions"
    :stream t
    :models '(;; has many more, check perplexity.ai
-             "pplx-7b-chat"
-             "pplx-70b-chat"
-             "pplx-7b-online"
-             "pplx-70b-online")))
+             pplx-7b-chat
+             pplx-70b-chat
+             pplx-7b-online
+             pplx-70b-online)))
 #+end_src
 
 #+html: </details>
@@ -471,7 +490,7 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model "claude-3-sonnet-20240229" ;  "claude-3-opus-20240229" also available
+ gptel-model 'claude-3-sonnet-20240229 ;  "claude-3-opus-20240229" also available
  gptel-backend (gptel-make-anthropic "Claude"
                  :stream t :key "your-api-key"))
 #+end_src
@@ -489,9 +508,12 @@ Register a backend with
   :endpoint "/openai/v1/chat/completions"
   :stream t
   :key "your-api-key"                   ;can be a function that returns the key
-  :models '("mixtral-8x7b-32768"
-            "gemma-7b-it"
-            "llama2-70b-4096"))
+  :models '(llama-3.1-70b-versatile
+            llama-3.1-8b-instant
+            llama3-70b-8192
+            llama3-8b-8192
+            mixtral-8x7b-32768
+            gemma-7b-it))
 #+end_src
 
 You can pick this backend from the menu when using gptel (see [[#usage][Usage]]).  Note that Groq is fast enough that you could easily set =:stream nil= and still get near-instant responses.
@@ -501,16 +523,19 @@ You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
 The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
-(setq gptel-model   "mixtral-8x7b-32768"
+(setq gptel-model   'mixtral-8x7b-32768
       gptel-backend
       (gptel-make-openai "Groq"
         :host "api.groq.com"
         :endpoint "/openai/v1/chat/completions"
         :stream t
         :key "your-api-key"
-        :models '("mixtral-8x7b-32768"
-                  "gemma-7b-it"
-                  "llama2-70b-4096")))
+        :models '(llama-3.1-70b-versatile
+                  llama-3.1-8b-instant
+                  llama3-70b-8192
+                  llama3-8b-8192
+                  mixtral-8x7b-32768
+                  gemma-7b-it)))
 #+end_src
 
 #+html: </details>
@@ -527,12 +552,12 @@ Register a backend with
   :endpoint "/api/v1/chat/completions"
   :stream t
   :key "your-api-key"                   ;can be a function that returns the key
-  :models '("openai/gpt-3.5-turbo"
-            "mistralai/mixtral-8x7b-instruct"
-            "meta-llama/codellama-34b-instruct"
-            "codellama/codellama-70b-instruct"
-            "google/palm-2-codechat-bison-32k"
-            "google/gemini-pro"))
+  :models '(openai/gpt-3.5-turbo
+            mistralai/mixtral-8x7b-instruct
+            meta-llama/codellama-34b-instruct
+            codellama/codellama-70b-instruct
+            google/palm-2-codechat-bison-32k
+            google/gemini-pro))
 
 #+end_src
 
@@ -543,19 +568,19 @@ You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
 The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
-(setq gptel-model   "mixtral-8x7b-32768"
+(setq gptel-model   'mixtral-8x7b-32768
       gptel-backend
       (gptel-make-openai "OpenRouter"               ;Any name you want
         :host "openrouter.ai"
         :endpoint "/api/v1/chat/completions"
         :stream t
         :key "your-api-key"                   ;can be a function that returns the key
-        :models '("openai/gpt-3.5-turbo"
-                  "mistralai/mixtral-8x7b-instruct"
-                  "meta-llama/codellama-34b-instruct"
-                  "codellama/codellama-70b-instruct"
-                  "google/palm-2-codechat-bison-32k"
-                  "google/gemini-pro")))
+        :models '(openai/gpt-3.5-turbo
+                  mistralai/mixtral-8x7b-instruct
+                  meta-llama/codellama-34b-instruct
+                  codellama/codellama-70b-instruct
+                  google/palm-2-codechat-bison-32k
+                  google/gemini-pro)))
 
 #+end_src
 
@@ -572,7 +597,7 @@ Register a backend with
   :stream t
   :context t                            ;Use context provided by embeddings
   :sources t                            ;Return information about source documents
-  :models '("private-gpt"))
+  :models '(private-gpt))
 
 #+end_src
 
@@ -583,7 +608,7 @@ You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
 The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
-(setq gptel-model   "private-gpt"
+(setq gptel-model   'private-gpt
       gptel-backend
       (gptel-make-privategpt "privateGPT"               ;Any name you want
         :protocol "http"
@@ -591,8 +616,113 @@ The above code makes the backend available to select.  If you want it to be the 
         :stream t
         :context t                            ;Use context provided by embeddings
         :sources t                            ;Return information about source documents
-        :models '("private-gpt")))
+        :models '(private-gpt)))
 
+#+end_src
+
+#+html: </details>
+#+html: <details><summary>
+**** DeepSeek
+#+html: </summary>
+
+Register a backend with
+#+begin_src emacs-lisp
+;; DeepSeek offers an OpenAI compatible API
+(gptel-make-openai "DeepSeek"       ;Any name you want
+  :host "api.deepseek.com"
+  :endpoint "/chat/completions"
+  :stream t
+  :key "your-api-key"               ;can be a function that returns the key
+  :models '(deepseek-chat deepseek-coder))
+
+#+end_src
+
+You can pick this backend from the menu when using gptel (see [[#usage][Usage]]).
+
+***** (Optional) Set as the default gptel backend
+
+The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
+#+begin_src emacs-lisp
+;; OPTIONAL configuration
+(setq gptel-model   'deepseek-chat
+      gptel-backend
+      (gptel-make-openai "DeepSeek"     ;Any name you want
+        :host "api.deepseek.com"
+        :endpoint "/chat/completions"
+        :stream t
+        :key "your-api-key"             ;can be a function that returns the key
+        :models '(deepseek-chat deepseek-coder)))
+
+#+end_src
+
+#+html: </details>
+#+html: <details><summary>
+**** Cerebras
+#+html: </summary>
+
+Register a backend with
+#+begin_src emacs-lisp
+;; Cerebras offers an instant OpenAI compatible API
+(gptel-make-openai "Cerebras"
+  :host "api.cerebras.ai"
+  :endpoint "/v1/chat/completions"
+  :stream t                             ;optionally nil as Cerebras is instant AI
+  :key "your-api-key"                   ;can be a function that returns the key
+  :models '(llama3.1-70b
+            llama3.1-8b))
+#+end_src
+
+You can pick this backend from the menu when using gptel (see [[#usage][Usage]]).
+
+***** (Optional) Set as the default gptel backend
+
+The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
+#+begin_src emacs-lisp
+;; OPTIONAL configuration
+(setq gptel-model   'llama3.1-8b
+      gptel-backend
+      (gptel-make-openai "Cerebras"
+        :host "api.cerebras.ai"
+        :endpoint "/v1/chat/completions"
+        :stream nil
+        :key "your-api-key"
+        :models '(llama3.1-70b
+                  llama3.1-8b)))
+#+end_src
+
+#+html: </details>
+#+html: <details><summary>
+**** Github Models
+#+html: </summary>
+
+Register a backend with
+#+begin_src emacs-lisp
+  ;; Github Models offers an OpenAI compatible API
+  (gptel-make-openai "Github Models" ;Any name you want
+    :host "models.inference.ai.azure.com"
+    :endpoint "/chat/completions"
+    :stream t
+    :key "your-github-token"
+    :models '(gpt-4o))
+#+end_src
+
+For all the available models, check the [[https://github.com/marketplace/models][marketplace]].
+
+You can pick this backend from the menu when using (see [[#usage][Usage]]).
+
+***** (Optional) Set as the default gptel backend
+
+The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
+#+begin_src emacs-lisp
+  ;; OPTIONAL configuration
+  (setq gptel-model  'gpt-4o
+        gptel-backend
+        (gptel-make-openai "Github Models" ;Any name you want
+          :host "models.inference.ai.azure.com"
+          :endpoint "/chat/completions"
+          :stream t
+          :key "your-github-token"
+          :models '(gpt-4o))
 #+end_src
 
 #+html: </details>
@@ -615,12 +745,12 @@ The above code makes the backend available to select.  If you want it to be the 
 | =gptel-menu=       | /(Same)/                                                      |
 |--------------------+---------------------------------------------------------------|
 
-|------------------+--------------------------------------------------------------------------------------|
-| *To add context* | Also available from the Transient menu                                               |
-|------------------+--------------------------------------------------------------------------------------|
-| =gptel-add=      | Add/remove a region or buffer to gptel's context.  Add/remove marked files in Dired. |
-| =gptel-add-file= | Add a (text-readable) file to gptel's context.                                       |
-|------------------+--------------------------------------------------------------------------------------|
+|------------------+-----------------------------------------------------------------------------------------|
+| *To add context* |                                                                                         |
+|------------------+-----------------------------------------------------------------------------------------|
+| =gptel-add=      | Add/remove a region or buffer to gptel's context.  In Dired, add/remove marked files.   |
+| =gptel-add-file= | Add a (text-readable) file to gptel's context.  Also available from the transient menu. |
+|------------------+-----------------------------------------------------------------------------------------|
 
 |----------------------------+----------------------------------------------------------------------------|
 | *In Org mode only*         |                                                                            |
@@ -635,7 +765,7 @@ The above code makes the backend available to select.  If you want it to be the 
 
 2. If a region is selected, the conversation will be limited to its contents.
 
-3. Call =M-x gptel-send= with a prefix argument (~C-u~) to
+3. Call =M-x gptel-send= with a prefix argument (~C-u~)
    - to set chat parameters (GPT model, system message etc) for this buffer,
    - include quick instructions for the next request only,
    - to add additional context -- regions, buffers or files -- to gptel,
@@ -643,16 +773,6 @@ The above code makes the backend available to select.  If you want it to be the 
    - or to replace the prompt with the response.
 
 #+html: <img src="https://github.com/karthink/gptel/assets/8607532/3562a6e2-7a5c-4f7e-8e57-bf3c11589c73" align="center" alt="Image showing gptel's menu with some of the available query options.">
-     
-With a region selected, you can also rewrite prose or refactor code from here:
-
-*Code*:
-
-[[https://user-images.githubusercontent.com/8607532/230770162-1a5a496c-ee57-4a67-9c95-d45f238544ae.png]]
-
-*Prose*:
-
-[[https://user-images.githubusercontent.com/8607532/230770352-ee6f45a3-a083-4cf0-b13c-619f7710e9ba.png]]
 
 *** In a dedicated chat buffer:
 
@@ -668,15 +788,93 @@ That's it. You can go back and edit previous prompts and responses if you want.
 
 The default mode is =markdown-mode= if available, else =text-mode=.  You can set =gptel-default-mode= to =org-mode= if desired.
 
+#+html: <details><summary>
+**** Including media (images, documents) with requests
+#+html: </summary>
+
+gptel supports sending media in Markdown and Org chat buffers, but this feature is disabled by default.
+
+- You can enable it globally, for all models that support it, by setting =gptel-track-media=.  
+- Or you can set it locally, just for the chat buffer, via the header line:
+
+#+html: <img src="https://github.com/user-attachments/assets/91f6aaab-2ea4-4806-9cc9-39b4b46a8e6c" align="center" alt="Image showing a gptel chat buffer's header line with the button to toggle media support">
+
+-----
+
+There are two ways to include media with requests:
+
+1. Adding media files to the context with =gptel-add-file=, described further below.
+2. Including links to media in chat buffers, described here:
+
+To send media -- images or other supported file types -- with requests in chat buffers, you can include links to them in the chat buffer.  Such a link must be "standalone", i.e. on a line by itself surrounded by whitespace.
+
+In Org mode, for example, the following are all *valid* ways of including an image with the request:
+
+- "Standalone" file link:
+#+begin_src
+Describe this picture
+
+[[file:/path/to/screenshot.png]]
+
+Focus specifically on the text content.
+#+end_src
+
+- "Standalone" file link with description:
+#+begin_src 
+Describe this picture
+
+[[file:/path/to/screenshot.png][some picture]]
+
+Focus specifically on the text content.
+#+end_src
+
+- "Standalone", angle file link:
+#+begin_src 
+Describe this picture
+
+<file:/path/to/screenshot.png>
+
+Focus specifically on the text content.
+#+end_src
+
+The following links are *not valid*, and the text of the link will be sent instead of the file contents:
+
+- Inline link:
+#+begin_src 
+Describe this [[file:/path/to/screenshot.png][picture]].
+
+Focus specifically on the text content.
+#+end_src
+
+- Link not "standalone":
+#+begin_src
+Describe this picture: 
+[[file:/path/to/screenshot.png]]
+Focus specifically on the text content.
+#+end_src
+
+- Not a valid Org link:
+#+begin_src 
+Describe the picture
+
+file:/path/to/screenshot.png
+#+end_src
+
+Similar criteria apply to Markdown chat buffers.
+
+#+html: </details>
+#+html: <details><summary>
 **** Save and restore your chat sessions
+#+html: </summary>
 
 Saving the file will save the state of the conversation as well.  To resume the chat, open the file and turn on =gptel-mode= before editing the buffer.
 
+#+html: </details>
 *** Include more context with requests
 
 By default, gptel will query the LLM with the active region or the buffer contents up to the cursor.  Often it can be helpful to provide the LLM with additional context from outside the current buffer. For example, when you're in a chat buffer but want to ask questions about a (possibly changing) code buffer and auxiliary project files.
 
-You can include additional text regions, buffers or files with gptel's queries.  This additional context is "live" and not a snapshot.  Once added, the regions, buffers or files are scanned and included at the time of each query.
+You can include additional text regions, buffers or files with gptel's queries.  This additional context is "live" and not a snapshot.  Once added, the regions, buffers or files are scanned and included at the time of each query.  When using multi-modal models, added files can be of any supported type -- typically images.
 
 You can add a selected region, buffer or file to gptel's context from the menu, or call =gptel-add=.  (To add a file use =gptel-add= in Dired or use the dedicated =gptel-add-file= command.)
 
@@ -685,6 +883,30 @@ You can examine the active context from the menu:
 
 And then browse through or remove context from the context buffer:
 #+html: <img src="https://github.com/karthink/gptel/assets/8607532/79a5ffe8-3d63-4bf7-9bf6-0457ab61bf2a" align="center" alt="Image showing gptel's context buffer.">
+
+*** Rewrite, refactor or fill in a region
+
+In any buffer: with a region selected, you can rewrite prose or refactor code from here:
+
+*Prose*:
+
+#+html: <img src="https://github.com/user-attachments/assets/172e75cd-11e9-4f3b-9ab9-b4edfb8f6695" align="center" />
+
+# [[https://user-images.githubusercontent.com/8607532/230770352-ee6f45a3-a083-4cf0-b13c-619f7710e9ba.png]]
+
+*Code*:
+
+#+html: <img src="https://github.com/user-attachments/assets/8670ddb3-8655-47f4-a70c-8994994e61e3" align="center" />
+
+# [[https://user-images.githubusercontent.com/8607532/230770162-1a5a496c-ee57-4a67-9c95-d45f238544ae.png]]
+
+When the refactor is ready, you can apply it or compare against the original:
+
+#+html: <img src="https://github.com/user-attachments/assets/a0cf33b2-3ad3-4f55-aa7b-4349e54d6771" align="center" />
+
+These actions are also available directly when the cursor is inside the pending rewrite region:
+
+#+html: <img src="https://github.com/user-attachments/assets/57e1fff7-f8e4-47f0-9bda-d0b698443559" align="center" />
 
 *** Extra Org mode conveniences
 
@@ -753,7 +975,7 @@ Now these will be enabled whenever you send a query from the transient menu.  If
 (keymap-global-set "<f6>" "C-u C-c <return> <return>")
 #+end_src
 
-Or see this [[https://github.com/karthink/gptel/wiki#save-transient-flags][wiki entry]].
+Or see this [[https://github.com/karthink/gptel/wiki/Commonly-requested-features#save-transient-flags][wiki entry]].
 
 #+html: </details>
 #+html: <details><summary>
@@ -762,7 +984,7 @@ Or see this [[https://github.com/karthink/gptel/wiki#save-transient-flags][wiki 
 
 gptel's default usage pattern is simple, and will stay this way: Read input in any buffer and insert the response below it.  Some custom behavior is possible with the transient menu (=C-u M-x gptel-send=).
 
-For more programmable usage, gptel provides a general =gptel-request= function that accepts a custom prompt and a callback to act on the response. You can use this to build custom workflows not supported by =gptel-send=.  See the documentation of =gptel-request=, and the [[https://github.com/karthink/gptel/wiki][wiki]] for examples.
+For more programmable usage, gptel provides a general =gptel-request= function that accepts a custom prompt and a callback to act on the response. You can use this to build custom workflows not supported by =gptel-send=.  See the documentation of =gptel-request=, and the [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]] for examples.
 
 #+html: </details>
 #+html: <details><summary>
@@ -840,6 +1062,7 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 |-------------------------------+----------------------------------------------------------------|
 | =gptel-default-mode=          | Major mode for dedicated chat buffers.                         |
 | =gptel-track-response=        | Distinguish between user messages and LLM responses?           |
+| =gptel-track-media=           | Send images or other media from links?                         |
 | =gptel-prompt-prefix-alist=   | Text inserted before queries.                                  |
 | =gptel-response-prefix-alist= | Text inserted before responses.                                |
 | =gptel-use-header-line=       | Display status messages in header-line (default) or minibuffer |
@@ -867,7 +1090,7 @@ Maybe, I'd like to experiment a bit more first.  Features added since the incept
 - Curl support (=gptel-use-curl=)
 - Streaming responses (=gptel-stream=)
 - Cancelling requests in progress (=gptel-abort=)
-- General API for writing your own commands (=gptel-request=, [[https://github.com/karthink/gptel/wiki][wiki]])
+- General API for writing your own commands (=gptel-request=, [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]])
 - Dispatch menus using Transient (=gptel-send= with a prefix arg)
 - Specifying the conversation context size
 - GPT-4 support
@@ -891,17 +1114,20 @@ Other Emacs clients for LLMs include
 
 There are several more: [[https://github.com/CarlQLange/chatgpt-arcana.el][chatgpt-arcana]], [[https://github.com/MichaelBurge/leafy-mode][leafy-mode]], [[https://github.com/iwahbe/chat.el][chat.el]]
 
-*** Extensions using gptel
+*** Packages using gptel
 
-These are packages that use gptel to provide additional functionality
+gptel is a general-purpose package for chat and ad-hoc LLM interaction.  The following packages use gptel to provide additional or specialized functionality:
 
-- [[https://github.com/kamushadenes/gptel-extensions.el][gptel-extensions]]: Extra utility functions for gptel.
-- [[https://github.com/kamushadenes/ai-blog.el][ai-blog.el]]: Streamline generation of blog posts in Hugo.
-- [[https://github.com/douo/magit-gptcommit][magit-gptcommit]]: Generate Commit Messages within magit-status Buffer using gptel.
-- [[https://github.com/armindarvish/consult-web][consult-web]]: Provides gptel as a source when querying multiple local and online sources.
-- [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]]: Provides branching conversations in Org buffers using gptel.  (Note that gptel includes this feature as well (via =gptel-org-branching-context=), but requires a recent version of Org mode (9.67 or later) to be installed.)
+- [[https://github.com/karthink/gptel-quick][gptel-quick]]: Quickly look up the region or text at point.
+- [[https://github.com/daedsidog/evedel][Evedel]]: Instructed LLM Programmer/Assistant
+- [[https://github.com/lanceberge/elysium][Elysium]]: Automatically apply AI-generated changes as you code
+- [[https://github.com/kamushadenes/gptel-extensions.el][gptel-extensions]]: Extra utility functions for gptel
+- [[https://github.com/kamushadenes/ai-blog.el][ai-blog.el]]: Streamline generation of blog posts in Hugo
+- [[https://github.com/douo/magit-gptcommit][magit-gptcommit]]: Generate Commit Messages within magit-status Buffer using gptel
+- [[https://github.com/armindarvish/consult-omni][consult-omni]]: Versatile multi-source search package.  It includes gptel as one of its many sources.
+- [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]]: Provides branching conversations in Org buffers using gptel.  (Note that gptel includes this feature as well (see =gptel-org-branching-context=), but requires a recent version of Org mode (9.67 or later) to be installed.)
 
-** COMMENT Breaking Changes
+** COMMENT Older Breaking Changes
 
 - =gptel-post-response-hook= has been renamed to =gptel-post-response-functions=, and functions in this hook are now called with two arguments: the start and end buffer positions of the response.  This should make it easy to act on the response text without having to locate it first.
 
