--- a/with-editor-3.4.3/docs/with-editor.texi
+++ b/with-editor-3.4.3/docs/with-editor.texi
@@ -31,7 +31,7 @@ General Public License for more details.
 @finalout
 @titlepage
 @title With-Editor User Manual
-@subtitle for version 3.4.1
+@subtitle for version 3.4.3
 @author Jonas Bernoulli
 @page
 @vskip 0pt plus 1filll
@@ -60,7 +60,7 @@ additional functionality which makes it useful even for end-users, who
 don't use Magit or another package which uses it internally.
 
 @noindent
-This manual is for With-Editor version 3.4.1.
+This manual is for With-Editor version 3.4.3.
 
 @insertcopying
 @end ifnottex
@@ -121,7 +121,7 @@ instance.
 
 You should @strong{not} customize this option permanently.  If you have to do
 it, then you should consider that a temporary kludge and inform the
-Magit maintainer as described in @ref{Debugging}.
+Magit maintainer as described in @ref{Debugging, , Debugging}.
 
 If With-Editor fails to find a suitable @code{emacsclient} on your system,
 then this should be fixed for all users at once, by teaching
