--- a/consult-1.9/CHANGELOG.org
+++ b/consult-1.9/CHANGELOG.org
@@ -2,6 +2,25 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 1.9 (2024-12-22)
+
+- Require Emacs 28.1.
+- ~consult-grep~, ~consult-find~ and similar commands: Ask for project first, when
+  invoked with double prefix argument ~C-u C-u~.
+- Deprecate ~consult-yank-rotate~ in favor of ~yank-from-kill-ring-rotate~.
+- ~consult-grep-max-columns~: Support value ~nil~ to disable truncation.
+- ~consult-line~: Enforce global completion style settings for compatibility with
+  buffer-local completion style settings, which may be used by Corfu.
+- Support the value 0 for ~consult-async-min-input~.
+- Remove special ~org-fold~ code. Set ~org-fold-core-style~ to ~overlays~ if unfolding
+  in Org files does not work for you.
+- ~consult-info~: Support sub files.
+- ~consult-buffer~, ~consult-project-buffer~: Add sources for known project roots.
+- ~consult--multi~: Support multiple narrow keys per source. Used by the project
+  buffer and project recent file source.
+- ~consult--async-sink~: The new action ~cancel~ was added to the async protocol.
+- ~consult--read~: Add new keyword argument ~:initial-narrow~.
+
 * Version 1.8 (2024-07-25)
 
 - =consult-preview-excluded-buffers=: New customization variable.
