--- a/consult-1.9/README.org
+++ b/consult-1.9/README.org
@@ -101,6 +101,9 @@ their descriptions.
   - r File registers
   - m Bookmarks
   - p Project
+  - B Project buffers
+  - F Project files
+  - R Project roots
   - Custom [[#multiple-sources][other sources]] configured in =consult-buffer-sources=.
 - =consult-buffer-other-window=, =consult-buffer-other-frame=,
   =consult-buffer-other-tab=: Variants of =consult-buffer=.
@@ -154,7 +157,7 @@ their descriptions.
   commands =consult-register-load=, =consult-register-store= or the built-in Emacs
   register commands.
 - =consult-register-format=: Set =register-preview-function= to this function for
-  an enhanced register formatting. See the [[#use-package-example][example configuration]].
+  an enhanced register formatting. Used automatically by =consult-register-window=.
 - =consult-register-window=: Replace =register-preview= with this function for a
   better register window. See the [[#use-package-example][example configuration]].
 - =consult-register-load=: Utility command to quickly load a register.
@@ -261,7 +264,9 @@ their descriptions.
   orderless. =consult-grep= supports preview. =consult-grep= searches the current
   [[#project-support][project directory]] if a project is found. Otherwise the =default-directory= is
   searched. If =consult-grep= is invoked with prefix argument =C-u M-s g=, you can
-  specify one or more comma-separated files and directories manually.
+  specify one or more comma-separated files and directories manually. If invoked
+  with two prefix arguments =C-u C-u M-s g=, you can first select a project if you
+  are not yet inside a project.
 - =consult-find=, =consult-fd=, =consult-locate=: Find file by matching the path
   against a regexp. Like for =consult-grep=, either the project root or the
   current directory is the root directory for the search. The input string is
@@ -751,11 +756,15 @@ they use lambdas and closures.
 
 The Consult package only provides commands and does not add any keybindings or
 modes. Therefore the package is non-intrusive but requires a little setup
-effort. In order to use the Consult commands, it is advised to add keybindings
-for commands which are accessed often. Rarely used commands can be invoked via
-=M-x=. Feel free to only bind the commands you consider useful to your workflow.
-The configuration shown here relies on the =use-package= macro, which is a
-convenient tool to manage package configurations.
+effort. While the configuration example is long, it consists essentially of key
+bindings only, such that the risk of interference with other Emacs functionality
+is minimized.
+
+In order to use the Consult commands, it is recommended to add keybindings for
+commands which are accessed often. Rarely used commands can be invoked via =M-x=.
+Feel free to only bind the commands you consider useful to your workflow. The
+configuration shown here relies on the =use-package= macro, which is a convenient
+tool to manage package configurations.
 
 *NOTE:* There is the [[https://github.com/minad/consult/wiki][Consult wiki]], where you can contribute additional
 configuration examples.
@@ -824,15 +833,12 @@ configuration examples.
   ;; The :init configuration is always executed (Not lazy)
   :init
 
-  ;; Optionally configure the register formatting. This improves the register
-  ;; preview for `consult-register', `consult-register-load',
-  ;; `consult-register-store' and the Emacs built-ins.
-  (setq register-preview-delay 0.5
-        register-preview-function #'consult-register-format)
-
-  ;; Optionally tweak the register preview window.
-  ;; This adds thin lines, sorting and hides the mode line of the window.
+  ;; Tweak the register preview for `consult-register-load',
+  ;; `consult-register-store' and the built-in commands.  This improves the
+  ;; register formatting, adds thin separator lines, register sorting and hides
+  ;; the window mode line.
   (advice-add #'register-preview :override #'consult-register-window)
+  (setq register-preview-delay 0.5)
 
   ;; Use Consult to select xref locations with preview
   (setq xref-show-xrefs-function #'consult-xref
@@ -922,7 +928,6 @@ an overview of all Consult variables and functions with their descriptions.
 | consult-ripgrep-args             | Command line arguments for ripgrep                  |
 | consult-themes                   | List of themes to be presented for selection        |
 | consult-widen-key                | Widening key during completion                      |
-| consult-yank-rotate              | Rotate kill ring                                    |
 
 ** Project support
 :properties:
@@ -971,6 +976,7 @@ Useful options are:
 - =:prompt= set the prompt string
 - =:preview-key= set the preview key, default is =consult-preview-key=
 - =:initial= set the initial input
+- =:initial-narrow= set the initial narrow key
 - =:default= set the default value
 - =:history= set the history variable symbol
 - =:add-history= add items to the future history, for example symbol at point
@@ -1035,7 +1041,7 @@ There exist multiple fine completion UIs beside Vertico, which are supported by
 Consult. Give them a try and find out which interaction model fits best for you.
 
 - The builtin completion UI, which pops up the =*Completions*= buffer.
-- The builtin =icomplete-vertical-mode= in Emacs 28 or newer.
+- The builtin =icomplete-vertical-mode=.
 - [[https://git.sr.ht/~protesilaos/mct][mct by Protesilaos Stavrou]]: Minibuffer and Completions in Tandem, which builds
   on the default completion UI.
 
@@ -1110,6 +1116,72 @@ Please provide the necessary important information with your bug report:
 
 When evaluating Consult-related code snippets you should enable [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Lexical-Binding.html][lexical binding]].
 Consult often relies on lambdas and lexical closures.
+
+* Hacking
+** Creating asynchronous completion commands
+
+If you have a completion source that's both dynamic and expensive to generate,
+=completing-read= may not be the best choice. Instead, =consult--read= serves as a
+thin wrapper around =completing-read= that provides this functionality. For
+example, consider the following slow script that splits its input on space:
+
+#+begin_src sh
+#!/usr/bin/env bash
+# simulate work
+sleep .1
+# generate completion candidates
+printf "%s\n" "$*" | tr " " "\n" | sort
+#+end_src
+
+Let's assume this script is callable as =testibus hello world=. To have Consult
+use it for completion, use =consult--async-command=:
+
+#+begin_src emacs-lisp
+(consult--read
+ (consult--async-command (lambda (input) (list "testibus" (string-trim input))))
+ :prompt "run testibus: ")
+#+end_src
+
+If the completion candidates are generated by Lisp instead, use
+=consult--dynamic-collection=:
+
+#+begin_src emacs-lisp
+(consult--read
+ (consult--dynamic-collection
+  (lambda (input)
+    (sleep-for 0.1) ;; Simulate work
+    (sort (split-string (string-trim input) nil t) #'string<)))
+ :prompt "run testibus: ")
+#+end_src
+
+** Live preview
+
+Implementing live preview requires the definition of a state or preview function
+as defined by =consult--with-preview=. The preview function receives the candidate
+and some action to perform (e.g., ='preview=). In its simplest form supporting
+live preview, it looks something like this:
+
+#+begin_src emacs-lisp
+(defun testibus--preview (action cand)
+  (pcase action
+    ('preview
+     (with-current-buffer-window " *testibus*" 'action nil
+       (erase-buffer)
+       (insert (format "input: %s\n" cand))))))
+#+end_src
+
+See the docstring of =consult--with-preview= for the lifecycle of the action
+argument. Once defined, we can use this preview function in =consult--read=:
+
+#+begin_src emacs-lisp
+(consult--read
+ (consult--dynamic-collection
+  (lambda (input)
+    (sleep-for 0.1) ;; Simulate work
+    (sort (split-string (string-trim input) nil t) #'string<)))
+ :prompt "run testibus: "
+ :state #'testibus--preview)
+#+end_src
 
 * Contributions
 :properties:
