--- a/marginalia-1.8/CHANGELOG.org
+++ b/marginalia-1.8/CHANGELOG.org
@@ -2,6 +2,11 @@
 #+author: Omar Antolín Camarena, Daniel Mendler
 #+language: en
 
+* Version 1.8 (2024-12-22)
+
+- Require Emacs 28.1.
+- Add G symbol class for customization groups.
+
 * Version 1.7 (2024-07-26)
 
 - Bump Compat dependency to Compat 30.
