--- a/transient-0.8.5/CHANGELOG
+++ b/transient-0.8.5/CHANGELOG
@@ -1,4 +1,61 @@
 # -*- mode: org -*-
+* v0.8.5    2025-03-01
+
+- Added new faces ~transient-key-recurse~ and ~transient-key-stack~.
+  58e22554
+
+Bug fixes:
+
+- ~transient--setup-recursion~ did not consider the ~resurse~ shorthand.
+  32a7e256
+
+- The parent group was not always stored in suffix objects.  #354
+
+- Invoking a suffix of a sub-prefix (which is configured to return to
+  the outer prefix), did exit instead of returning, if the suffix's
+  own behavior was not explicitly specified.  #352
+
+- The color of a suffix that returns to the outer prefix, was wrong
+  when there isn't actually an outer prefix.  e88005d2
+
+- When potentially removing other bindings for the same command
+  while adding a new binding, false-negative avoidance was to heavily
+  favored over false-positive avoidance.  #355
+
+- Defining the ~transient-higher-level~ face involves calling
+  ~face-attributes~ on another face.  That call requested the value
+  for the current frame (which may not exist yet) instead of using
+  the default.  #359
+
+- When the transient window is hidden while the minibuffer is used,
+  then it was not restored if using Helm.  #361
+
+- Non-suffix command that aren't accessed via a symbol, were not
+  properly wrapped to ensure post-command cleanup happens even in
+  case of an error or if the user aborts a minibuffer use, causing
+  the menu window to get stuck.  08201f06
+
+* v0.8.4    2025-02-01
+
+- Added new option ~transient-show-docstring-format~.  65cd6cec
+
+- Unless called with a prefix argument, ~transient-toggle-docstrings~
+  now only shows docstrings for the current menu invocation.  13f3f5e0
+
+- The ~##~ macro from the ~llama~ package can now be used after keywords
+  in group specifications (including suffix bindings).  7c650436
+
+- Suffix commands can now be advised using the new ~advice~ and ~advice*~
+  slots available for suffixes and groups.  This feature is still
+  experimental.  #340
+
+- ~transient-scope~ can now also match against prefix classes, not just
+  specific prefix commands.  #334
+
+- The default level of a suffix command can now be set via its
+  prototype, using the new function ~transient-set-default-level~.
+  f6c249c7
+
 * v0.8.3    2025-01-03
 
 - Added new constant ~transient-version~.  3022f6d5
@@ -58,10 +115,14 @@ Bug fixes:
 
 - Added documentation for ~inapt-if*~ slots to manual.  179545a6
 
-- ~transient-args~ and ~transient-scope~ now both take a prefix command or
-  a list of prefix commands as argument.  ~transient-scope~ can still be
-  called without an argument, but that should only be done in functions
-  that take part in setting up a menu, not in a suffix command.
+- ~transient-args~ now takes a prefix command or a list of prefix
+  commands as argument.
+
+- ~transient-scope~ now takes a prefix command or a list of prefix
+  commands and/or a prefix class or list of prefix classes as
+  arguments.  It can still be called without any argument, but that
+  should only be done in functions that take part in setting up a
+  menu, not in a suffix command.
 
 - Added new generic function ~transient-prefix-value~, giving finer
   control over how the value returned by ~transient-args~ is determined.
