--- a/consult-2.0/README.org
+++ b/consult-2.0/README.org
@@ -353,7 +353,8 @@ their descriptions.
 #+findex: consult-info
 #+findex: consult-man
 - =consult-man=: Find Unix man page, via Unix =apropos= or =man -k=. =consult-man= opens
-  the selected man page using the Emacs =man= command.
+  the selected man page using the Emacs =man= command. Supports live preview of
+  the theme while scrolling through the candidates.
 - =consult-info=: Full text search through info pages. If the command is invoked
   from within an ~*info*~ buffer, it will search through the current manual. You
   may want to create your own commands which search through a predefined set of
@@ -465,7 +466,7 @@ to be considered.
 
 #+begin_src emacs-lisp
 (consult-customize
- consult-ripgrep consult-git-grep consult-grep
+ consult-ripgrep consult-git-grep consult-grep consult-man
  consult-bookmark consult-recent-file consult-xref
  consult--source-bookmark consult--source-file-register
  consult--source-recent-file consult--source-project-recent-file
@@ -604,12 +605,12 @@ troubleshooting. The prompt has a small indicator showing the process status:
 :end:
 #+cindex: multiple sources
 
-Multiple synchronous candidate sources can be combined. This feature is used by
-the =consult-buffer= command to present buffer-like candidates in a single menu
-for quick access. By default =consult-buffer= includes buffers, bookmarks, recent
-files and project-specific buffers and files. It is possible to configure the
-list of sources via the =consult-buffer-sources= variable. Arbitrary custom
-sources can be defined.
+Multiple static and asynchronous candidate sources can be combined. This feature
+is used by the =consult-buffer= command to present buffer-like candidates in a
+single menu for quick access. By default =consult-buffer= includes buffers,
+bookmarks, recent files and project-specific buffers and files. The
+=consult-buffer-sources= variable configures the list of sources. Arbitrary custom
+sources can be added to this list.
 
 As an example, the bookmark source is defined as follows:
 
@@ -624,14 +625,19 @@ As an example, the bookmark source is defined as follows:
     :action   ,#'consult--bookmark-action))
 #+end_src
 
-Required source fields:
-- =:category= Completion category.
+Either the =:items= or the =:async= source field is required:
 - =:items= List of strings to select from or function returning list of strings.
-  A list of cons cells is not supported.
+  The strings can carry metadata in text properties, which is then available to
+  the =:annotate=, =:action= and =:state= functions. The list can also consist of
+  pairs, with the string in the =car= used for display and the =cdr= the actual
+  candidate.
+- =:async= Alternative to =:items= for asynchronous sources. See the docstring for
+  details.
 
 Optional source fields:
 - =:name= Name of the source, used for narrowing, group titles and annotations.
-- =:narrow= Narrowing character or =(character . string)= pair.
+- =:narrow= Narrowing character, =(char . string)= pair or list of pairs.
+- =:category= Completion category.
 - =:preview-key= Preview key or keys which trigger preview.
 - =:enabled= Function which must return t if the source is enabled.
 - =:hidden= When t candidates of this source are hidden by default.
@@ -857,7 +863,7 @@ configuration examples.
   ;; :preview-key on a per-command basis using the `consult-customize' macro.
   (consult-customize
    consult-theme :preview-key '(:debounce 0.2 any)
-   consult-ripgrep consult-git-grep consult-grep
+   consult-ripgrep consult-git-grep consult-grep consult-man
    consult-bookmark consult-recent-file consult-xref
    consult--source-bookmark consult--source-file-register
    consult--source-recent-file consult--source-project-recent-file
@@ -894,6 +900,7 @@ an overview of all Consult variables and functions with their descriptions.
 | consult-async-refresh-delay      | Refresh delay for asynchronous commands             |
 | consult-async-split-style        | Splitting style used for async commands             |
 | consult-async-split-styles-alist | Available splitting styles used for async commands  |
+| consult-async-indicator          | Async indicator characters                          |
 | consult-bookmark-narrow          | Narrowing configuration for =consult-bookmark=        |
 | consult-buffer-filter            | Filter for =consult-buffer=                           |
 | consult-buffer-sources           | List of virtual buffer sources                      |
@@ -1134,11 +1141,12 @@ printf "%s\n" "$*" | tr " " "\n" | sort
 #+end_src
 
 Let's assume this script is callable as =testibus hello world=. To have Consult
-use it for completion, use =consult--async-command=:
+use it for completion, use =consult--process-collection=:
 
 #+begin_src emacs-lisp
 (consult--read
- (consult--async-command (lambda (input) (list "testibus" (string-trim input))))
+ (consult--process-collection
+  (lambda (input) (list "testibus" (string-trim input))))
  :prompt "run testibus: ")
 #+end_src
 
@@ -1150,9 +1158,27 @@ If the completion candidates are generated by Lisp instead, use
  (consult--dynamic-collection
   (lambda (input)
     (sleep-for 0.1) ;; Simulate work
-    (sort (split-string (string-trim input) nil t) #'string<)))
+    (split-string input nil t)))
  :prompt "run testibus: ")
 #+end_src
+
+=consult--dynamic-collection= can take a function with a callback such that the
+completion UI can update for long running computations.
+
+#+begin_src emacs-lisp
+(consult--read
+ (consult--dynamic-collection
+  (lambda (input callback)
+    (dotimes (i 3)
+      (sleep-for 0.1) ;; Simulate work
+      (funcall callback (mapcar (lambda (s) (format "%s%s" s i))
+                                (split-string input nil t))))))
+ :prompt "run testibus: ")
+#+end_src
+
+The asynchronous completion collections =consult--dynamic-collection= and
+=consult--process-collection= can be used for =consult--multi= sources. Specify them
+as =:async= field of the source plist.
 
 ** Live preview
 
@@ -1176,9 +1202,11 @@ argument. Once defined, we can use this preview function in =consult--read=:
 #+begin_src emacs-lisp
 (consult--read
  (consult--dynamic-collection
-  (lambda (input)
-    (sleep-for 0.1) ;; Simulate work
-    (sort (split-string (string-trim input) nil t) #'string<)))
+  (lambda (input callback)
+    (dotimes (i 3)
+      (sleep-for 0.1) ;; Simulate work
+      (funcall callback (mapcar (lambda (s) (format "%s%s" s i))
+                                (split-string input nil t))))))
  :prompt "run testibus: "
  :state #'testibus--preview)
 #+end_src
