--- a/consult-2.0/CHANGELOG.org
+++ b/consult-2.0/CHANGELOG.org
@@ -2,6 +2,35 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 2.0 (2025-01-28)
+
+- New features:
+  + ~consult--multi~: Add support for asynchronous sources.
+  + ~consult-man~: Add preview.
+- *BREAKING CHANGE*: New async API
+  + Async functions must have the uniform curried form
+    ~(lambda (sink) (lambda (action) ...)~ and are composed with
+    ~consult--async-pipeline~. See the docstring of ~consult--async-pipeline~ for
+    details.
+  + ~consult--read~: New ~:async-wrap~ keyword argument.
+  + ~consult--multi~: Add support for ~:async~ sources.
+  + ~consult--async-min-input~: New async function which enforces a minimum input
+    length. The input length check has been removed from ~consult--async-split~.
+  + ~consult--async-transform~: Macro converted to function.
+  + ~consult--process-collection~: New function replacing ~consult--async-command~.
+    The function accepts keyword arguments to customize the pipeline.
+  + ~consult--dynamic-collection~: The function accepts more keyword arguments to
+    customize the pipeline.
+  + ~consult--async-refresh-timer~ and ~consult--async-refresh-immediate~: Replaced by
+    ~consult--async-refresh~ with a ~DELAY~ argument.
+  + ~consult--async-split-thingatpt~ and ~consult--async-split-initial~: Removed
+    since ~consult--read~ automatically inserts the splitter prefix if needed.
+- Minor changes:
+  + Remove obsolete ~consult-yank-rotate~.
+  + Add customizable variable ~consult-async-indicator~.
+  + ~consult-completion-in-region~: When inside minibuffer, use minibuffer content
+    as prompt.
+
 * Version 1.9 (2024-12-22)
 
 - Require Emacs 28.1.
