--- a/consult-2.1/CHANGELOG.org
+++ b/consult-2.1/CHANGELOG.org
@@ -2,6 +2,16 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 2.1 (2025-03-11)
+
+- Remove obsolete ~consult--async-*~ APIs.
+- File preview: Ensure that remote files do not slow down preview.
+- File preview: Do not preview gpg files.
+- ~consult-yank-pop~, ~consult-history~: Respect display properties when previewing
+  to avoid leaking hidden data.
+- ~consult-completion-in-region~: Auto-detect completion UI.
+- ~consult-completion-in-region~: Improve handling of single candidates.
+
 * Version 2.0 (2025-01-28)
 
 - New features:
