--- a/marginalia-2.1/README.org
+++ b/marginalia-2.1/README.org
@@ -58,8 +58,8 @@ with [[https://github.com/oantolin/embark][Embark]] for action support and [[htt
 * Information shown by the annotators
 
 In general, to learn more about what different annotations mean, a good starting
-point is to look at ~marginalia-annotator-registry~, and follow up to the
-annotation function of the category you are interested in.
+point is to look at ~marginalia-annotators~, and follow up to the annotation
+function of the category you are interested in.
 
 For example the annotations for Elisp symbols include their symbol class - =v= for
 variable, =f= for function, =c= for command, etc. For more information on what the
@@ -115,13 +115,12 @@ Completion categories are also important for [[https://github.com/oantolin/embar
 based on the completion category and benefits from Marginalia's classifiers.
 
 Once the category of the candidates is known, Marginalia looks in the
-=marginalia-annotator-registry= to find the associated annotator to use. An
-annotator is a function that takes a completion candidate string as an argument
-and returns an annotation string to be displayed after the candidate in the
-minibuffer. More than one annotator can be assigned to each each category,
-displaying more, less or different information. Use the =marginalia-cycle= command
-to cycle between the annotations of different annotators defined for the current
-category.
+=marginalia-annotators= to find the associated annotator to use. An annotator is a
+function that takes a completion candidate string as an argument and returns an
+annotation string to be displayed after the candidate in the minibuffer. More
+than one annotator can be assigned to each each category, displaying more, less
+or different information. Use the =marginalia-cycle= command to cycle between the
+annotations of different annotators defined for the current category.
 
 Here's an example of a basic face annotator:
 
@@ -136,7 +135,7 @@ After defining a new annotator, associate it with a category in the annotator
 registry as follows:
 
 #+begin_src emacs-lisp
-  (add-to-list 'marginalia-annotator-registry
+  (add-to-list 'marginalia-annotators
                '(face my-face-annotator marginalia-annotate-face builtin none))
 #+end_src
 
@@ -153,13 +152,13 @@ Marginalia activates rich annotators by default. Depending on your preference
 you may want to use the builtin annotators or even no annotators by default and
 only activate the annotators on demand by invoking ~marginalia-cycle~.
 
-In order to disable an annotator permanently, the ~marginalia-annotator-registry~
-can be modified. For example if you prefer to never see file annotations, you
-can delete all file annotators from the registry.
+In order to disable an annotator permanently, the ~marginalia-annotators~ can be
+modified. For example if you prefer to never see file annotations, you can
+delete all file annotators from the registry.
 
 #+begin_src emacs-lisp
-  (setq marginalia-annotator-registry
-        (assq-delete-all 'file marginalia-annotator-registry))
+  (setq marginalia-annotators
+        (assq-delete-all 'file marginalia-annotators))
 #+end_src
 
 To use the builtin annotators by default, you can run the following code.
@@ -168,7 +167,7 @@ Replace =builtin= by =none= to disable annotators by default.
 #+begin_src emacs-lisp
 (mapc (lambda (x)
         (setcdr x (cons 'builtin (remq 'builtin (cdr x)))))
-      marginalia-annotator-registry)
+      marginalia-annotators)
 #+end_src
 
 As an alternative to ~marginalia-cycle~, if a completion category supports two
@@ -182,7 +181,7 @@ annotators, you can toggle between them using the following command.
        (setcdr x (append (reverse (remq 'none
                                         (remq 'builtin (cdr x))))
                          '(builtin none))))
-     marginalia-annotator-registry))
+     marginalia-annotators))
 #+end_src
 
 After cycling the annotators you may want to automatically save the
@@ -193,8 +192,8 @@ configuration. This can be achieved using an advice which calls
   (advice-add #'marginalia-cycle :after
               (lambda ()
                 (let ((inhibit-message t))
-                  (customize-save-variable 'marginalia-annotator-registry
-                                           marginalia-annotator-registry))))
+                  (customize-save-variable 'marginalia-annotators
+                                           marginalia-annotators))))
 #+end_src
 
 * Icons in the minibuffer
